--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
       --secondary:#764ba2;
       --radius:16px;
       --shadow:0 8px 32px rgba(31,38,135,.15);
+      --mono:'Fira Code',monospace;
+      --selected:#e0e0ff;
     }
-    body{margin:0;background:linear-gradient(135deg,var(--primary),var(--secondary));min-height:100vh;color:#333;line-height:1.6;padding:2rem;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif}
+    *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif}
+    body{margin:0;background:linear-gradient(135deg,var(--primary),var(--secondary));min-height:100vh;color:#333;line-height:1.6;padding:2rem}
     header{text-align:center;color:#fff;margin-bottom:2rem}
     header h1{font-size:2.5rem;margin:.3rem 0}
     nav{display:flex;flex-wrap:wrap;gap:.5rem;justify-content:center;margin-bottom:2rem}
@@ -31,6 +34,8 @@
     button:disabled{opacity:.5}
     .correct{background:#38b000}
     .wrong{background:#e63946}
+    .selected{background:var(--selected);border:2px solid var(--primary)}
+    @media(max-width:600px){body{padding:1rem}header h1{font-size:2rem}}
   </style>
 </head>
 
@@ -87,7 +92,7 @@
       <tr><td>6</td><td>Hexane</td><td>C₆H₁₄</td><td>CH₃(CH₂)₄CH₃</td></tr>
       <tr><td>7</td><td>Heptane</td><td>C₇H₁₆</td><td>CH₃(CH₂)₅CH₃</td></tr>
       <tr><td>8</td><td>Octane</td><td>C₈H₁₈</td><td>CH₃(CH₂)₆CH₃</td></tr>
-      <tr><td>9</td><td>Nonane</td><td>C₉H₂₀</td><td>CH₃(CH₂)₇CH₃</td></tr>
+    <tr><td>9</td><td>Nonane</td><td>C₉H₂₀</td><td>CH₃(CH₂)₇CH₃</td></tr>
     <tr><td>10</td><td>Decane</td><td>C₁₀H₂₂</td><td>CH₃(CH₂)₈CH₃</td></tr>
     </tbody>
   </table>
