--- a/index.html
+++ b/index.html
@@ -44,102 +44,101 @@
 <p>Beautiful & interactive revision</p>
 
 <nav>
+  <a href="#objectives">🎯 Objectives</a>
   <a href="#intro">📚 What are Alkanes?</a>
-  <a href="#geometry">🔺 Geometry</a>
   <a href="#formula">🧮 Formula</a>
   <a href="#table">🔤 10 Alkanes</a>
-  <a href="#reactions">⚙️ Reactions</a>
   <a href="#props">🧪 Properties & Uses</a>
   <a href="#draw">🎨 Draw Butane</a>
-  <a href="#quiz">📝 Quiz</a>
+  <a href="#quiz">📝 20 MCQs</a>
 </nav>
+
+<!-- 🎯 OBJECTIVES -->
+<section id="objectives" class="section">
+  <h2>🎯 Objectives</h2>
+  <p>By the end of this lesson, you will be able to:</p>
+  <ul>
+    <li>Define what alkanes are and explain why they are called saturated hydrocarbons.</li>
+    <li>State and apply the general formula for alkanes.</li>
+    <li>Name the first ten alkanes correctly.</li>
+    <li>Write and draw the molecular and structural formulas for simple alkanes.</li>
+    <li>Describe the physical properties of alkanes.</li>
+    <li>Explain the chemical properties of alkanes.</li>
+    <li>Give examples of common uses of alkanes.</li>
+    <li>Test your understanding using practice MCQs with explanations.</li>
+  </ul>
+</section>
 
 <!-- 1️⃣ INTRO -->
 <section id="intro" class="section">
   <h2>📚 What Are Alkanes?</h2>
   <ul>
-    <li><strong>Alkanes</strong> are <strong>saturated hydrocarbons</strong>.</li>
-    <li><strong>Saturated</strong> → only single covalent bonds.</li>
-    <li><strong>Hydrocarbon</strong> → carbon & hydrogen only.</li>
+    <li><strong>Alkanes</strong> are <strong>saturated hydrocarbons</strong> – only single covalent bonds.</li>
+    <li>Each carbon forms four single bonds; chains can be straight or branched.</li>
   </ul>
+  <img class="tetra" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Methane-CRC-MW-3D-balls.png/800px-Methane-CRC-MW-3D-balls.png" alt="Methane 3-D">
 </section>
 
-<!-- 2️⃣ GEOMETRY -->
-<section id="geometry" class="section">
-  <h2>🔺 Tetrahedral Geometry</h2>
-  <img class="tetra" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Methane-2D-dimensions.svg/1280px-Methane-2D-dimensions.svg.png" alt="Methane 2-D">
-  <p>Every carbon sits at the centre of a <strong>tetrahedron</strong> with bond angles <strong>109.5°</strong>.</p>
-</section>
-
-<!-- 3️⃣ GENERAL FORMULA -->
+<!-- 2️⃣ GENERAL FORMULA -->
 <section id="formula" class="section">
   <h2>🧮 General Formula</h2>
-  <p style="font-family:'Fira Code',monospace;font-size:1.4rem">C<sub>n</sub>H<sub>2n+2</sub></p>
-  <p>Example: n = 4 → C₄H₁₀ (butane)</p>
+  <p style="font-family:var(--mono);font-size:1.4rem">C<sub>n</sub>H<sub>2n+2</sub></p>
+  <p>Example: n = 3 → C₃H₈ (propane)</p>
 </section>
 
-<!-- 4️⃣ FIRST 10 ALKANES -->
+<!-- 3️⃣ FIRST 10 ALKANES -->
 <section id="table" class="section">
   <h2>🔤 First 10 Alkanes</h2>
   <table>
-    <thead><tr><th>C atoms</th><th>Name</th><th>Formula</th><th>Condensed</th></tr></thead>
+    <thead><tr><th>C atoms</th><th>Name</th>Formula</th></tr></thead>
     <tbody>
-      <tr><td>1</td><td>Methane</td><td>CH₄</td><td>CH₄</td></tr>
-      <tr><td>2</td><td>Ethane</td><td>C₂H₆</td><td>CH₃–CH₃</td></tr>
-      <tr><td>3</td><td>Propane</td><td>C₃H₈</td><td>CH₃–CH₂–CH₃</td></tr>
-      <tr><td>4</td><td>Butane</td><td>C₄H₁₀</td><td>CH₃–CH₂–CH₂–CH₃</td></tr>
-      <tr><td>5</td><td>Pentane</td><td>C₅H₁₂</td><td>CH₃(CH₂)₃CH₃</td></tr>
-      <tr><td>6</td><td>Hexane</td><td>C₆H₁₄</td><td>CH₃(CH₂)₄CH₃</td></tr>
-      <tr><td>7</td><td>Heptane</td><td>C₇H₁₆</td><td>CH₃(CH₂)₅CH₃</td></tr>
-      <tr><td>8</td><td>Octane</td><td>C₈H₁₈</td><td>CH₃(CH₂)₆CH₃</td></tr>
-    <tr><td>9</td><td>Nonane</td><td>C₉H₂₀</td><td>CH₃(CH₂)₇CH₃</td></tr>
-    <tr><td>10</td><td>Decane</td><td>C₁₀H₂₂</td><td>CH₃(CH₂)₈CH₃</td></tr>
+      <tr><td>1</td><td>Methane</td><td>CH₄</td></tr>
+      <tr><td>2</td><td>Ethane</td><td>C₂H₆</td></tr>
+      <tr><td>3</td><td>Propane</td><td>C₃H₈</td></tr>
+      <tr><td>4</td><td>Butane</td><td>C₄H₁₀</td></tr>
+      <tr><td>5</td><td>Pentane</td><td>C₅H₁₂</td></tr>
+      <tr><td>6</td><td>Hexane</td><td>C₆H₁₄</td></tr>
+      <tr><td>7</td><td>Heptane</td><td>C₇H₁₆</td></tr>
+      <tr><td>8</td><td>Octane</td><td>C₈H₁₈</td></tr>
+      <tr><td>9</td><td>Nonane</td><td>C₉H₂₀</td></tr>
+      <tr><td>10</td><td>Decane</td><td>C₁₀H₂₂</td></tr>
     </tbody>
   </table>
+  <img src="https://mammothmemory.net/images/user/base/Chemistry/9.%20Hydrocarbons/2.9.3%20Examples%20of%20alkanes%20found%20in%20crude%20oil.jpg" alt="Alkanes in crude oil" style="max-width:100%;border-radius:var(--radius);margin-top:1rem;">
 </section>
 
-<!-- 5️⃣ REACTIONS -->
-<section id="reactions" class="section">
-  <h2>⚙️ Common Reactions</h2>
-  <div class="flex">
-    <div>
-      <h3>1️⃣ Combustion</h3>
-      <p>Complete: CH₄ + 2 O₂ → CO₂ + 2 H₂O</p>
-      <p>Incomplete: CH₄ + O₂ → CO + H₂O</p>
-    </div>
-    <div>
-      <h3>2️⃣ Substitution</h3>
-      <p>CH₄ + Cl₂ → CH₃Cl + HCl  (UV light)</p>
-    </div>
-  </div>
-</section>
-
-<!-- 6️⃣ PROPERTIES & USES -->
+<!-- 4️⃣ PROPERTIES & USES -->
 <section id="props" class="section">
   <h2>🧪 Properties & Uses</h2>
   <div class="flex">
     <div>
-      <strong>Properties</strong>
+      <h3>Physical</h3>
       <ul>
         <li>Non-polar → insoluble in water</li>
         <li>Boiling point ↑ with chain length</li>
-        <li>Combustion → CO₂ + H₂O</li>
       </ul>
     </div>
     <div>
-      <strong>Uses</strong>
+      <h3>Chemical</h3>
       <ul>
-        <li>Cooking gas: propane, butane</li>
-        <li>Petrol: octane</li>
-        <li>Paraffin wax</li>
+        <li>Combustion → CO₂ + H₂O</li>
+        <li>Substitution with halogens under UV light</li>
+      </ul>
+    </div>
+    <div>
+      <h3>Uses</h3>
+      <ul>
+        <li>Methane: natural gas</li>
+        <li>Butane / propane: LPG</li>
+        <li>Octane: petrol</li>
       </ul>
     </div>
   </div>
 </section>
 
-<!-- 7️⃣ LIVE SKETCHER -->
+<!-- 5️⃣ LIVE SKETCHER -->
 <section id="draw" class="section">
-  <h2>🎨 Live Sketcher (Drag Bonds)</h2>
+  <h2>🎨 Draw Butane Yourself</h2>
   <p>Drag atoms • drag from one atom to another to create / cycle bonds.</p>
   <p><strong>Hold <kbd>Shift</kbd></strong> while dragging to cycle: single → double → triple → none.</p>
   <canvas id="canvas" width="520" height="300"></canvas>
@@ -152,9 +151,9 @@
   <p id="simMsg"></p>
 </section>
 
-<!-- 8️⃣ MINI QUIZ (submit + next) -->
+<!-- 6️⃣ 20-MCQ QUIZ -->
 <section id="quiz" class="section">
-  <h2>📝 Mini Quiz (10 Questions)</h2>
+  <h2>📝 20 MCQs with Why</h2>
   <div id="quizContainer"></div>
 </section>
 
@@ -167,18 +166,28 @@ document.querySelectorAll('nav a').forEach(link=>{
   });
 });
 
-/* ---------- 10-question quiz with submit & next ---------- */
+/* ---------- 20-question quiz ---------- */
 const quizData=[
-  {q:'What is the general formula for alkanes?',a:0,opts:['C<sub>n</sub>H<sub>2n+2</sub>','C<sub>n</sub>H<sub>2n</sub>','C<sub>n</sub>H<sub>2n-2</sub>','C<sub>n</sub>H<sub>n</sub>']},
-  {q:'Which of these is NOT an alkane?',a:2,opts:['Methane','Ethane','Propene','Butane']},
-  {q:'Alkanes are called saturated hydrocarbons because:',a:1,opts:['They have double bonds','They contain maximum hydrogen','They contain oxygen','They are soluble in water']},
-  {q:'Which alkane has the highest boiling point?',a:2,opts:['Methane','Butane','Pentane','Ethane']},
-  {q:'Which of these is a property of alkanes?',a:2,opts:['Soluble in water','Form acidic solutions','Non-polar','React easily with acids']},
-  {q:'Which statement about combustion of alkanes is true?',a:1,opts:['They produce only carbon monoxide','Complete combustion produces carbon dioxide and water','They don’t react with oxygen','They only burn with UV light']},
-  {q:'Which alkane is used as cooking gas?',a:1,opts:['Methane','Butane','Octane','Ethene']},
-  {q:'Which condition is needed for substitution reaction of methane with chlorine?',a:2,opts:['High pressure','High temperature only','UV light','Acid catalyst']},
-  {q:'Which gas indicates incomplete combustion?',a:2,opts:['CO₂','O₂','CO','H₂']},
-  {q:'Which pair is correct for a substitution reaction product?',a:0,opts:['CH₄ + Cl₂ → CH₃Cl + HCl','C₂H₆ + O₂ → CO₂ + H₂O','CH₄ + Br₂ → CO + Br₂','CH₄ + H₂O → C₂H₆ + CO₂']}
+  {q:'What is the general formula for alkanes?',a:0,opts:['C<sub>n</sub>H<sub>2n+2</sub>','C<sub>n</sub>H<sub>2n</sub>','C<sub>n</sub>H<sub>2n-2</sub>','C<sub>n</sub>H<sub>n</sub>'],why:'Alkanes have only single bonds, hence C<sub>n</sub>H<sub>2n+2</sub>.'},
+  {q:'Which alkane has 4 carbon atoms?',a:2,opts:['Propane','Pentane','Butane','Hexane'],why:'But- prefix means four.'},
+  {q:'Alkanes are called saturated because:',a:3,opts:['They have double bonds','They have triple bonds','They have aromatic rings','They have only single bonds'],why:'"Saturated" means maximum hydrogen, i.e., only single bonds.'},
+  {q:'Which is an alkane?',a:3,opts:['Ethene','Ethyne','Ethanol','Ethane'],why:'Alkanes have only single bonds.'},
+  {q:'Boiling point increases with:',a:1,opts:['Shorter chain','Longer chain','More hydrogen','Less carbon'],why:'Longer chains → stronger van der Waals forces.'},
+  {q:'Complete combustion of alkanes produces:',a:2,opts:['CO + H₂','CO + H₂O','CO₂ + H₂O','C + H₂'],why:'Excess oxygen gives CO₂ + H₂O.'},
+  {q:'Which alkane is in LPG?',a:1,opts:['Methane','Butane','Octane','Decane'],why:'Butane (and propane) are liquefied for LPG.'},
+  {q:'Which condition is needed for methane + chlorine?',a:2,opts:['Pressure','Heat','UV light','Acid'],why:'UV light initiates free-radical substitution.'},
+  {q:'Which gas indicates incomplete combustion?',a:2,opts:['CO₂','O₂','CO','H₂'],why:'CO is produced when oxygen is insufficient.'},
+  {q:'C₅H₁₂ is:',a:0,opts:['Pentane','Hexane','Butane','Heptane'],why:'C₅H₂(5)+2 = C₅H₁₂ → pentane.'},
+  {q:'Short-chain alkanes are:',a:2,opts:['Solids','Liquids','Gases','Ions'],why:'Methane, ethane, propane, butane are gases at room temp.'},
+  {q:'Why insoluble in water?',a:2,opts:['Ionic','Polar','Non-polar','Acidic'],why:'Water is polar; alkanes are non-polar.'},
+  {q:'Methane + Br₂ gives:',a:0,opts:['CH₃Br + HBr','CH₂Br₂ + H₂','CHBr₃ + H₂O','CBr₄ + H₂O'],why:'UV light gives monobromination first.'},
+  {q:'Complete combustion of butane:',a:0,opts:['C₄H₁₀ + 6.5O₂ → 4CO₂ + 5H₂O','C₄H₁₀ + 2O₂ → 4CO + 5H₂O','C₄H₁₀ + O₂ → C + H₂O','C₄H₁₀ + 3O₂ → 4C + 5H₂'],why:'Balanced with excess O₂ gives CO₂ and H₂O.'},
+  {q:'Petrol contains mainly:',a:2,opts:['Methane','Butane','Octane','Decane'],why:'Octane is the reference component in petrol.'},
+  {q:'C₆H₁₄ is:',a:1,opts:['Pentane','Hexane','Heptane','Octane'],why:'Hex- means six.'},
+  {q:'Float on water because:',a:1,opts:['Denser','Less dense','Dissolve','Conduct'],why:'They are less dense and non-polar.'},
+  {q:'Physical property:',a:2,opts:['Combustion','Substitution','Insolubility','Chlorination'],why:'Insolubility is physical; reactions are chemical.'},
+  {q:'Burn easily due to:',a:0,opts:['Weak C-H bonds','Polarity','Solubility','Double bonds'],why:'C-H bonds release energy when burned.'},
+  {q:'Molecular formula shows:',a:1,opts:['Arrangement','Total atoms','Bond angles','Ions'],why:'It shows total atoms, not arrangement.'}
 ];
 
 let currentQ=0, score=0, mistakes=[], selectedIndex=null;
@@ -186,7 +195,10 @@ const quizContainer=document.getElementById('quizContainer');
 
 function buildQuiz(){
   if(currentQ>=quizData.length){
-    showReview();
+    quizContainer.innerHTML=`<p>🎉 Done! You scored ${score}/20.</p>` + (mistakes.length?'<p>Review mistakes below.</p>':'');
+    mistakes.forEach(m=>{
+      quizContainer.innerHTML+=`<div style="margin:1rem 0"><strong>${m.q}</strong><br><span style="color:red">You: ${m.opts[m.selected]}</span><br><span style="color:green">Correct: ${m.opts[m.a]}</span><br><em>${m.why}</em></div>`;
+    });
     return;
   }
   selectedIndex=null;
@@ -196,7 +208,7 @@ function buildQuiz(){
     ${q.opts.map((opt,i)=>`<button class="opt" onclick="select(${i})">${opt}</button>`).join('')}
     <p id="quizMsgQ"></p>
     <button id="submitBtn" onclick="submit()">Submit</button>
-    <button id="nextBtn" onclick="next()" disabled>Next Question</button>
+    <button id="nextBtn" onclick="next()" disabled>Next</button>
   `;
 }
 
@@ -214,8 +226,8 @@ function submit(){
     score++;
     msg.innerHTML='✅ Correct!';
   }else{
-    mistakes.push({...q,selected:selectedIndex});
-    msg.innerHTML=`❌ The correct answer is <strong>${q.opts[q.a]}</strong>.`;
+    mistakes.push(q);
+    msg.innerHTML=`❌ Correct: <strong>${q.opts[q.a]}</strong><br><em>${q.why}</em>`;
   }
   document.getElementById('submitBtn').disabled=true;
   document.getElementById('nextBtn').disabled=false;
@@ -224,22 +236,6 @@ function submit(){
 function next(){
   currentQ++;
   buildQuiz();
-}
-
-function showReview(){
-  if(mistakes.length===0){
-    quizContainer.innerHTML=`<p>🎉 Perfect! You scored ${score}/10.</p>`;
-    return;
-  }
-  let html=`<p>📝 You scored ${score}/10. Review your mistakes below.</p>`;
-  mistakes.forEach(m=>{
-    html+=`<div style="margin:1rem 0">
-        <strong>${m.q}</strong><br>
-        <span style="color:red">Your answer: ${m.opts[m.selected]}</span><br>
-        <span style="color:green">Correct: ${m.opts[m.a]}</span>
-      </div>`;
-  });
-  quizContainer.innerHTML=html;
 }
 
 buildQuiz();
@@ -326,7 +322,7 @@ cv.onmouseup=e=>{
     const rect=cv.getBoundingClientRect(),x=e.clientX-rect.left,y=e.clientY-rect.top;
     const end=atoms.findIndex(a=>(x-a.x)**2+(y-a.y)**2<radius[a.type]**2);
     if(end>=0 && end!==dragBond.start){
-      const b=bonds.find(b=>(b.a===dragBond.start&&b.b===end)||(b.a===end&&b.b===dragBond.start));
+      const b=bonds.find(b=>(b.a===dragBond.start&b.b===end)||(b.a===end&&b.b===dragBond.start));
       if(b){b.order=(b.order+1)%4;if(b.order===0) bonds.splice(bonds.indexOf(b),1);}
       else bonds.push({a:dragBond.start,b:end,order:1});
     }
